--- a/选型与拓扑.md
+++ b/选型与拓扑.md
@@ -1,17 +1,21 @@
 ## 可能的选型：
+
+``` 
 半桥驱动 L6388ED013TR (全N管 可耐600v）
 NMOS WST02N20B (200v 1A)
 单片机 esp32-c3（有蓝牙有wifi，便宜，不用usb转串口芯片可以直接编程）
+``` 
 ---
 ## 可能的电路拓扑：
-1 经典boost加全桥：
+### 经典boost加全桥：
 有手就行
 
 
-2 单极boost全桥：
-好处少一级boost，坏处控制比较复杂，但还是fsm能处理的程度。
+### 单极boost全桥：
 ![top2](https://github.com/PinkiePie1/D9Lab-Shocker/blob/main/images/topology.png)
 ---
+好处器件更少，坏处控制更复杂
+
 R1两端为输出。
 
 输出正压时 Q2Q3开，Q1给PWM信号（比如打进去六个40u的方波脉冲然后关闭，打进去的脉冲数对应强度），Q4关
